<resources>
    <string name="app_name">Memarize</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="CreateAccountButton">Create an Account</string>
    <string name="Welcome">Welcome</string>
    <string name="SignIn">Sign In</string>
    <string name="WelcomeTo">Welcome to</string>
    <string name="Memarize">Memarize!</string>
    <string name="GetStarted">Let\'s get started!</string>
    <string name="SignOut">Sign Out</string>
    <string name="Store">Store</string>
    <string name="CurrentCoins">CurrentCoins</string>
    <string name="NameYourPet">Name your pet!</string>
    <string name="Petname">Pet Name...</string>
    <string name="petSelection">Pet Selection</string>
    <string name="Next">Next</string>
    <string name="Hi">Hi! </string>
    <string name="petStatus1">Your pet</string>
    <string name="petStatus2">"feels "</string>
    <string name="todo">TODO</string>
    <string name="landingText"><![CDATA[An interactive English learning & pet system]]></string>
    <string name="name_key">name</string>
    <string name="WhereToStart">Where should we start?</string>
    <string name="IncorrectWords">Incorrect Words</string>
    <string name="Continue">Continue</string>
    <string name="complete">Completed!</string>
    <string name="language">EN/TH</string>
    <string name="time">Time</string>
    <string name="Recover_your_pet_from_tiredness">Recover your pet from tiredness</string>
    <string name="Recover_your_pet_from_sickness">Recover your pet from sickness</string>
    <string name="Recover_your_pet_from_boredom">Recover your pet from boredom</string>
    <string name="Recover_your_pet_from_thirstiness">Recover your pet from thirstiness</string>
    <string name="Recover_your_pet_from_injury">Recover your pet from injury</string>
    <string name="Recover_your_pet_from_hungriness">Recover your pet from hungriness</string>
    <string name="Recover_your_pet_from_dirtiness">Recover your pet from dirtiness</string>
    <string name="time_1mins">1 mins</string>
    <string name="time_3mins">3 mins</string>
    <string name="time_20mins">10 mins</string>
    <string name="time_30mins">30 mins</string>
    <string name="time_300mins">300 mins</string>
    <string name="score">"Score : "</string>
    <string name="Select_Language">Select Language</string>
    <string name="correct">"Correct : "</string>
    <string name="normal">good.</string>
    <string name="tired">tired.</string>
    <string name="bored">bored.</string>
    <string name="hungry">hungry.</string>
    <string name="dirty">dirty.</string>
    <string name="thirsty">thirsty.</string>
    <string name="sick">sick.</string>
    <string name="injured">injured.</string>
    <string name="notenough">Not enough coin</string>
    <string name="success">"Successfully"</string>
    <string name="success2"/>
    <string name="bathe">bathed your</string>
    <string name="food">bought a food for</string>
    <string name="water">bought a water for</string>
    <string name="toy">bought a toy for</string>
    <string name="bed">bought a bed for</string>
    <string name="vaccine">vaccinated</string>
    <string name="medkit">healed</string>
    <string name="Total">"Total :"</string>
    <string name="word">"words"</string>
    <string name="warning">Warning : The game will be reset</string>
    <string name="successful">Login Successfully</string>
    <string name="register">Register Successfully</string>
    <string name="failed">Login Failed</string>
    <string name="fill">Please fill in all the fields</string>
    <string name="full">Congratulations!\nYou got every word correct.</string>
    <string name="minlength">Password length must be more than 6 characters</string>
    <string name="noans">You didn\'t answer any question</string>
</resources>
