<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@drawable/gradient"
                                                   tools:context=".pages.register.RegisterActivity">

    <Button
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="65dp" android:layout_marginEnd="346dp"
        android:layout_marginBottom="614dp" android:background="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/changeLanguage"
        android:layout_width="51dp"
        android:layout_height="24dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="20dp" android:layout_marginBottom="630dp" android:background="#00FFFFFF"
        android:fontFamily="@font/prompt_bold"
        android:stateListAnimator="@null" android:text="@string/language"
        android:textColor="#FFFFFF" android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="141dp"
        android:layout_marginBottom="520dp" android:contentDescription="@string/GetStarted"
        android:fontFamily="@font/prompt_bold"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/NameYourPet"
        android:textColor="#FFFFFF" android:textSize="40sp" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/NameYourPet"/>
    <EditText
        android:id="@+id/petName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="319dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="372dp"
        android:background="@drawable/rounded_et"
        android:ems="10"
        android:fontFamily="@font/prompt"
        android:hint="@string/Petname" android:importantForAutofill="no"
        android:inputType="textShortMessage" android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <Button
        android:id="@+id/create"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="566dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="125dp"
        android:background="@drawable/blue_rounded_button"
        android:fontFamily="@font/prompt_bold"
        android:paddingLeft="20sp" android:paddingRight="20sp"
        android:text="@string/CreateAccountButton" android:textColor="@color/bright_text_dark_focused"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>

    <Spinner
        android:id="@+id/spinnerPet"
        android:layout_width="109dp"
        android:layout_height="40dp"
        android:layout_marginStart="221dp"
        android:layout_marginTop="388dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="293dp" android:background="@drawable/rounded_et"
        android:entries="@array/pet_array" android:paddingStart="32dp"
        android:spinnerMode="dropdown"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="397dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="303dp"
        android:fontFamily="@font/prompt" android:text="@string/petSelection"
        android:textColor="#FFFFFF" android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>