<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@drawable/gradient"
                                                   tools:context=".pages.store.StoreActivity">

    <Button
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp" android:layout_marginEnd="346dp"
        android:layout_marginBottom="614dp" android:background="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/changeLanguage"
        android:layout_width="51dp"
        android:layout_height="24dp"
        android:layout_marginStart="334dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="628dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/prompt_bold" android:stateListAnimator="@null"
        android:text="@string/language" android:textColor="#FFFFFF"
        android:textSize="16sp" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/Store"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="568dp"
        android:contentDescription="@string/Store"
        android:fontFamily="@font/prompt_bold"
        android:gravity="center"
        android:text="@string/Store"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/CurrentCoinStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="202dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="495dp"
        android:drawableStart="@drawable/coin"
        android:drawablePadding="10dp"
        android:fontFamily="@font/prompt" android:text="@string/CurrentCoins"
        android:textColor="#ffffff" android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="72dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CurrentCoinStore">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemRecyclerView"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="224dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>