<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".pages.main.MainActivity">


    <TextView
        android:id="@+id/welcomeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="154dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="639dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="Hi Sam!"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        style="@style/Divider"
        android:layout_width="292dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="496dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="235dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/view"
        style="@style/Divider"
        android:layout_width="292dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="527dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        style="@style/Divider"
        android:layout_width="0.5dp"
        android:layout_height="100dp"
        android:layout_marginStart="205dp"
        android:layout_marginTop="535dp"
        android:layout_marginEnd="206dp"
        android:layout_marginBottom="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="295dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="632dp"
        android:text="@string/SignOut"
        android:textColor="@color/bright_text_dark_focused"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/petInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="135dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="566dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="testpetname"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/petStatus"
        android:layout_width="200dp"
        android:layout_height="199dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="287dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="245dp"
        android:layout_marginTop="552dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="131dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/shop"/>

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="552dp"
        android:layout_marginEnd="248dp"
        android:layout_marginBottom="131dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/play"/>

    <TextView
        android:id="@+id/CurrentCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="654dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="50dp"
        android:contentDescription=""
        android:drawableLeft="@drawable/coin"
        android:fontFamily="@font/roboto"
        android:text="@string/CurrentCoins"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>